<resources>
    <string name="app_name">AppVentas</string>

    <string name="menu_delete_customers">Eliminar Clientes</string>
    <string name="menu_delete_products">Eliminar Productos</string>
    <string name="menu_view_export">Mostrar pedidos exportados</string>

    <string name="header_customers">CLIENTES</string>
    <string name="header_products">PRODUCTOS</string>

    <string name="start">Inicio</string>
    <string name="customers">Clientes</string>
    <string name="products">Productos</string>
    <string name="make_sale">Realizar Venta</string>
    <string name="orders">Pedidos</string>
    <string name="exit">Salir</string>

    <string name="lbl_fecha">FECHA</string>
    <string name="lbl_caja">CAJA</string>
    <string name="lbl_cliente">CLIENTE</string>
    <string name="btn_siguiente">SIGUIENTE</string>
    <string name="btn_scan">ESCANEAR</string>
    <string name="btn_finalizar">FINALIZAR</string>
    <string name="btn_cliente">AÑADIR</string>
    <string name="btn_importar">IMPORTAR</string>
    <string name="btn_eliminar">ELIMINAR</string>
    <string name="btn_exportar">EXPORTAR</string>

    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="dialog_makesale">¿Cuantas unidades son?</string>
    <string name="dialog_anadir">¿Desea continuar leyendo codigos?</string>
    <string name="dialog_scanner">Elija uno:</string>

    <string-array name="opciones_scanner">
        <item>Camara</item>
        <item>Lector</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_make_sale">MakeSale</string>
</resources>
